indentation + mb-2 for col

--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -149,24 +149,24 @@
           Press <kbd><kbd>ctrl</kbd> + <kbd>enter</kbd></kbd> or <kbd><kbd>⌘</kbd> + <kbd>enter</kbd></kbd> to submit search.
         </small>
       </div>
-      <div class='col-md-4'>
-      <p>Allowed Fields (<code><strong>field</strong>:value</code>):</p>
-      <ul class='list-unstyled'>
-        <li><strong>attachment</strong>: yes or no</li>
-        <li><strong>author</strong>: Simple or Quoted term</li>
-        <li><strong>body</strong>: Simple or Quoted term</li>
-        <li><strong>category</strong>: Simple or Quoted term</li>
-        <li><strong>date</strong>: see date format</li>
-        <li><strong>elabid</strong>: Simple or Quoted term</li>
-        <li><strong>group</strong>: Simple or Quoted term</li>
-        <li><strong>locked</strong>: yes or no</li>
-        <li><strong>rating</strong>: 1, 2, 3, 4, 5, or unrated or 0</li>
-        <li><strong>status</strong>: Simple or Quoted term</li>
-        <li><strong>timestamped</strong>: yes or no</li>
-        <li><strong>title</strong>: Simple or Quoted term</li>
-        <li><strong>visibility</strong>: Simple or Quoted term</li>
-      </ul>
-      <a class='clickable' data-action='toggle-modal' data-target='advancedSearchModal'>{{ 'Full syntax'|trans }}</a>
+      <div class='col-md-4 mb-2'>
+        <p>Allowed Fields (<code><strong>field</strong>:value</code>):</p>
+        <ul class='list-unstyled'>
+          <li><strong>attachment</strong>: yes or no</li>
+          <li><strong>author</strong>: Simple or Quoted term</li>
+          <li><strong>body</strong>: Simple or Quoted term</li>
+          <li><strong>category</strong>: Simple or Quoted term</li>
+          <li><strong>date</strong>: see date format</li>
+          <li><strong>elabid</strong>: Simple or Quoted term</li>
+          <li><strong>group</strong>: Simple or Quoted term</li>
+          <li><strong>locked</strong>: yes or no</li>
+          <li><strong>rating</strong>: 1, 2, 3, 4, 5, or unrated or 0</li>
+          <li><strong>status</strong>: Simple or Quoted term</li>
+          <li><strong>timestamped</strong>: yes or no</li>
+          <li><strong>title</strong>: Simple or Quoted term</li>
+          <li><strong>visibility</strong>: Simple or Quoted term</li>
+        </ul>
+        <a class='clickable' data-action='toggle-modal' data-target='advancedSearchModal'>{{ 'Full syntax'|trans }}</a>
       </div>
     </div>
 
