--- a/src/templates/show-item-table.html
+++ b/src/templates/show-item-table.html
@@ -58,7 +58,7 @@
                 <a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}'><i class='fas fa-pencil-alt clickable link-like'></i></a>
               {% endif %}
               <!-- toggle body -->
-              <span data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-randid={{ randomId }} data-action='toggle-body' class='clickable' title='{{ 'Toggle content'|trans }}'>
+              <span data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
                 <i class='fas fa-plus-circle link-like'></i>
               </span>
 
