--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -7,7 +7,7 @@
 <div class='row justify-content-around mt-4'>
     <!-- STEPS -->
     <section class='col-md-6'>
-      <i class='fas fa-check-square mr-1 align-baseline'></i><h5 class='d-inline'>{{ 'Steps'|trans }}</h5>
+      <i class='fas fa-fw fa-check-square mr-1 align-baseline'></i><h5 class='d-inline'>{{ 'Steps'|trans }}</h5>
       <br>
       <!-- the stepsDiv id is in its own div because otherwise if it's on the section above it doesn't work well, not sure why -->
       <div id='stepsDiv'>
@@ -92,7 +92,7 @@
     </section>
     <!-- LINKS -->
     <section class='col-md-6'>
-        <i class='fas fa-link mr-1 align-baseline'></i><h4 class='d-inline'>{{ 'Linked items'|trans }}</h4>
+        <i class='fas fa-fw fa-link mr-1 align-baseline'></i><h4 class='d-inline'>{{ 'Linked items'|trans }}</h4>
         <br>
         <div class='mt-2' id='links_div_{{ Entity_id }}'>
             {% if linksArr %}
