--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -305,18 +305,40 @@
 
 
     <div hidden data-save-hidden='metadataSearchDiv' class='box'>
-      <div class='row'>
+      <!-- row 1 -->
+      <div class='row' id='metadataFirstInputs'>
         <div class='col-md-4'>
-          <label for='metakey'>{{ 'Name of field'|trans }}</label>
-          <input type='text' id='metakey' class='form-control' name='metakey' value='{{ Request.query.get('metakey') != '' ? Request.query.get('metakey') }}' />
+          {% set randomid = random() %}
+          <label for='metakey_{{ randomid }}'>{{ 'Name of field'|trans }}</label>
+          <input type='text' id='metakey_{{ randomid }}' class='form-control' name='metakey[]' value='{{ Request.query.all()['metakey'][0] != '' ? Request.query.all()['metakey'][0] }}' />
         </div>
 
         <div class='col-md-4'>
-          <label for='metavalue'>{{ 'Value'|trans }}</label>
-          <input type='text' id='metavalue' class='form-control' name='metavalue' value='{{ Request.query.get('metavalue') != '' ? Request.query.get('metavalue') }}' />
+          <label for='metavalue_{{ randomid }}'>{{ 'Value'|trans }}</label>
+          <input type='text' id='metavalue_{{ randomid }}' class='form-control' name='metavalue[]' value='{{ Request.query.all()['metavalue'][0] != '' ? Request.query.all()['metavalue'][0] }}' />
           <p>{{ "Tip: you can use '%' as wildcard"|trans }}</p>
         </div>
       </div>
+
+      <!-- add as many extra fields as present in the query, except for the first that is always here -->
+      {% for extra in Request.query.all()['metakey']|slice(1) %}
+        <div class='row'>
+          <div class='col-md-4'>
+            {% set randomid = random() %}
+            <label for='metakey_{{ randomid }}'>{{ 'Name of field'|trans }}</label>
+            <input type='text' id='metakey_{{ randomid }}' class='form-control' name='metakey[]' value='{{ Request.query.all()['metakey'][loop.index] != '' ? Request.query.all()['metakey'][loop.index] }}' />
+          </div>
+
+          <div class='col-md-4'>
+            <label for='metavalue_{{ randomid }}'>{{ 'Value'|trans }}</label>
+            <input type='text' id='metavalue_{{ randomid }}' class='form-control' name='metavalue[]' value='{{ Request.query.all()['metavalue'][loop.index] != '' ? Request.query.all()['metavalue'][loop.index] }}' />
+            <p>{{ "Tip: you can use '%' as wildcard"|trans }}</p>
+          </div>
+        </div>
+      {% endfor %}
+
+      <!-- button to add an extra field input -->
+      <div data-action='add-extra-fields-search-inputs'><i class='fas fa-plus-circle fa-2x'></i></div>
     </div>
 
     <div style='margin:30px;' class='text-center'>
