--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -305,39 +305,24 @@
 
 
     <div hidden data-save-hidden='metadataSearchDiv' class='box'>
-      <!-- row 1 -->
-      <div class='row' id='metadataFirstInputs'>
-        <div class='col-md-4'>
-          {% set randomid = random() %}
-          <label for='metakey_{{ randomid }}'>{{ 'Name of field'|trans }}</label>
-          <input type='text' id='metakey_{{ randomid }}' class='form-control' name='metakey[]' value='{{ Request.query.all()['metakey'][0] != '' ? Request.query.all()['metakey'][0] }}' />
-        </div>
-
-        <div class='col-md-4'>
-          <label for='metavalue_{{ randomid }}'>{{ 'Value'|trans }}</label>
-          <input type='text' id='metavalue_{{ randomid }}' class='form-control' name='metavalue[]' value='{{ Request.query.all()['metavalue'][0] != '' ? Request.query.all()['metavalue'][0] }}' />
-          <p>{{ "Tip: you can use '%' as wildcard"|trans }}</p>
-        </div>
-      </div>
-
-      <!-- add as many extra fields as present in the query, except for the first that is always here -->
-      {% for extra in Request.query.all()['metakey']|slice(1) %}
-        <div class='row'>
+      {# add as many extra fields as present in the query but at least one #}
+      {% for metakey in (Request.query.all('metakey') ?: ['']) %}
+        {% set metavalue = Request.query.all('metavalue')[loop.index0] %}
+        <div class='row' {{- loop.first ? "id='metadataFirstInputs'" -}} >
           <div class='col-md-4'>
             {% set randomid = random() %}
             <label for='metakey_{{ randomid }}'>{{ 'Name of field'|trans }}</label>
-            <input type='text' id='metakey_{{ randomid }}' class='form-control' name='metakey[]' value='{{ Request.query.all()['metakey'][loop.index] != '' ? Request.query.all()['metakey'][loop.index] }}' />
+            <input type='text' id='metakey_{{ randomid }}' class='form-control' name='metakey[]' value='{{ metakey != '' ? metakey }}' />
           </div>
-
           <div class='col-md-4'>
             <label for='metavalue_{{ randomid }}'>{{ 'Value'|trans }}</label>
-            <input type='text' id='metavalue_{{ randomid }}' class='form-control' name='metavalue[]' value='{{ Request.query.all()['metavalue'][loop.index] != '' ? Request.query.all()['metavalue'][loop.index] }}' />
+            <input type='text' id='metavalue_{{ randomid }}' class='form-control' name='metavalue[]' value='{{ metavalue != '' ? metavalue }}' />
             <p>{{ "Tip: you can use '%' as wildcard"|trans }}</p>
           </div>
         </div>
       {% endfor %}
 
-      <!-- button to add an extra field input -->
+      {# button to add an extra field input #}
       <div data-action='add-extra-fields-search-inputs'><i class='fas fa-plus-circle fa-2x'></i></div>
     </div>
 
