show mysql version in sysadmin information panel

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -166,6 +166,7 @@ MySQL database structure version: {{ App.Config.configArr.schema }}</p>
       <ul class='list-group'>
         <li class='list-group-item'>{{ 'Operating System'|trans }}: {{ phpInfos.0 }}</li>
         <li class='list-group-item'>{{ 'PHP Version'|trans }}: {{ phpInfos.1 }}</li>
+        <li class='list-group-item'>{{ 'MySQL Version'|trans }}: {{ phpInfos.6 }}</li>
         <li class='list-group-item'>{{ 'Largest integer supported'|trans }}: {{ phpInfos.2 }}</li>
         <li class='list-group-item'>{{ 'PHP configuration directory'|trans }}: {{ phpInfos.3 }}</li>
         <li class='list-group-item'>{{ 'Maximum file size for uploaded files'|trans }}: {{ phpInfos.4 }}</li>
