--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -108,7 +108,7 @@
                         <i class="fas fa-arrows-down-to-line"></i>
                       </a>
 
-                      <a data-action='import-link' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}'>
+                      <a data-action='import-link-body' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}'>
                         <i class='fas fa-lg fa-file-import'></i>
                       </a>
                     {% endif %}
