--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -42,6 +42,7 @@ $text-muted: $lightgray;
 @import 'jsoneditor';
 @import 'ove';
 @import 'todolist';
+@import 'tribute';
 
 /* Font is Lato */
 @font-face {
