fix 3Dmol format/file extension guessing

--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -124,8 +124,9 @@
                                   </ul>
                                 </div>
 
+                                <!-- IMPORTANT: here the data-href has the storage first and the filename last or 3Dmol will get confused with the format -->
                                 <div class='viewer_3Dmoljs file-uploaded'
-                                  data-href='app/download.php?f={{ upload.long_name }}&storage={{ upload.storage }}'
+                                  data-href='app/download.php?storage={{ upload.storage }}&f={{ upload.long_name }}'
                                   data-style="{{ ext == 'pdb' ? 'cartoon:color=spectrum' : 'stick'}}"
                                   data-backgroundcolor='0xffffff'
                                   id='3Dmol_{{ upload.id }}'>
