--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -16,7 +16,15 @@
             The entire team will be searched unless there is an author fields.</p>
         <dl>
           <dt>Term</dt>
-          <dd>A sequence of characters without space (<code>&blank;</code>).<br>
+          <dd>A sequence of characters without space (<code>&blank;</code>),
+              <code>|</code>,
+              <code>&amp;</code>,
+              <code>-</code>,
+              <code>!</code>,
+              <code>(</code>,
+              <code>)</code>,
+              <code>'</code> and
+              <code>"</code>.<br>
               <em>termA</em> or <em>termB</em> or <em>456</em>
           </dd>
           <dt>Quoted term</dt>
@@ -24,16 +32,57 @@
               <em>'Hello world'</em> or <em>"I love eLabFTW!"</em>
           </dd>
         </dl>
-        <p>Two wildcards are available. The percent sign (<code>%</code>) matches zero or more characters while the underscore (<code>_</code>) matches exactly one character. To search for literal <code>%</code> or <code>_</code> the characters need to be escaped with a backslash  <code>\%</code> or <code>\_</code>.</p>
+        <p>Two wildcards are available. The percent sign
+          (<code>%</code>)
+          matches zero or more characters while the underscore
+          (<code>_</code>)
+          matches exactly one character. To search for literal
+          <code>%</code> or <code>_</code>
+          the characters need to be escaped with a backslash
+          <code>\%</code> or <code>\_</code>.</p>
         <h3>Term concatenation and grouping</h3>
         <p>Terms can be connected in different ways:</p>
         <ul>
-          <li><code>OR</code> or <code>|</code>, <em>termA OR termB</em> or <em>termA | termB</em></li>
-          <li><code>AND</code>, <code>&amp;</code> or space (<code>&blank;</code>), <em>termA termB</em> or <em>termA AND termB</em> or <em>termA & termB</em></li>
-          <li><code>NOT</code>, <code>-</code> or <code>!</code>, <em>! termA</em> or <em>NOT termA</em></li>
-          <li>Parenthesis <code>()</code>, <em>(termA OR termB) AND ! termC</em></li>
+          <li>
+            <code>OR</code> or
+            <code>|</code>,
+            <em>termA OR termB</em> or
+            <em>termA|termB</em>
+          </li>
+          <li>
+            <code>AND</code>,
+            <code>&amp;</code> or
+            space (<code>&blank;</code>),
+            <em>termA AND termB</em> or
+            <em>termA&amp;termB</em> or
+            <em>termA&nbsp;termB</em>
+          </li>
+          <li>
+            <code>NOT</code>,
+            <code>-</code> or
+            <code>!</code>,
+            <em>NOT termA</em> or
+            <em>-termA</em> or
+            <em>!termA</em>
+          </li>
+          <li>Parenthesis <code>()</code>, <em>(termA OR termB) AND !termC</em></li>
         </ul>
-        <p>The operators are listed in increasing order of precedence. Note the space around the operators. <em>termA termB OR termC</em> is equivalent to <em>(termA AND termB) OR termC</em>. To give priority to <code>OR</code> use parenthesis: <em>termA AND (termB OR termC)</em>.</p>
+        <p>The operators are listed in increasing order of precedence. Note the whitespace around the operators.
+          <code>OR</code>, <code>AND</code> and <code>NOT</code>
+          require to be surrounded by whitespace while
+          <code>|</code>,
+          <code>&amp;</code>,
+          <code>-</code> and
+          <code>!</code>
+          don't.<br>
+          <em>termA termB OR termC</em>
+          is equivalent to
+          <em>(termA AND termB) OR termC</em>.
+          To give priority to
+          <code>OR</code>
+          use parenthesis:
+          <em>termA AND (termB OR termC)</em>.
+        </p>
         <h3>Field/value pair searches</h3>
         <p>Field/value pairs are also applicable in the quick search fields.</p>
         <p>Basic syntax <code><strong>field</strong>:value</code></p>
