disallow changing password or email when not authenticated locally
* get rid of the isAuthBy property of AuthResponse: store the
  auth_service in users table
* split user email update into own function

--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -258,32 +258,35 @@
 <div class='box' data-tabcontent='2' hidden>
     <form class='form-group' method='post' action='app/controllers/UcpController.php'>
       {{ App.Session.get('csrf')|csrf }}
-      <div class='row'>
-        <div class='col-md-6'>
-          <h4>{{ 'Modify your personal informations'|trans }}</h4>
-          <label for='currpass'>{{ 'Enter your password to edit your profile.'|trans }}</label>
-          <div class='input-group'>
-            <input class='form-control' id='currpass' name='currpass' type='password' autocomplete='current-password' pattern='.{8,}' required />
-            <div class='input-group-append'>
-              <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='currpass'><i class='fas fa-eye' aria-hidden='true'></i></span>
+      {# only show the email/password fields for locally authenticated users #}
+      {% if App.Users.userData.auth_service == constant('Elabftw\\Controllers\\LoginController::AUTH_LOCAL') %}
+        <div class='row'>
+          <div class='col-md-6'>
+            <h4>{{ 'Modify your personal informations'|trans }}</h4>
+              <label for='currpass'>{{ 'Enter your password to edit your profile.'|trans }}</label>
+              <div class='input-group'>
+                <input class='form-control' id='currpass' name='currpass' type='password' autocomplete='current-password' pattern='.{8,}' required />
+                <div class='input-group-append'>
+                  <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='currpass'><i class='fas fa-eye' aria-hidden='true'></i></span>
+                </div>
+              </div>
+            <label for='email'>{{ 'Email'|trans }}</label>
+            <input class='form-control' name='email' id='email' type='email' value='{{ App.Users.userData.email }}' />
+          </div>
+          <div class='col-md-6'>
+            <h4>{{ 'Modify your password'|trans }}</h4>
+            <label for='newpass'>{{ 'New password'|trans }}</label>
+            <div class='input-group'>
+              <input class='form-control' id='newpass' autocomplete='new-password' name='newpass' type='password' pattern='.{8,}' autocomplete='new-password' />
+              <div class='input-group-append'>
+                <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='newpass'><i class='fas fa-eye' aria-hidden='true'></i></span>
+              </div>
             </div>
           </div>
-          <label for='email'>{{ 'Email'|trans }}</label>
-          <input class='form-control' name='email' id='email' type='email' value='{{ App.Users.userData.email }}' />
         </div>
-        <div class='col-md-6'>
-          <h4>{{ 'Modify your password'|trans }}</h4>
-          <label for='newpass'>{{ 'New password'|trans }}</label>
-          <div class='input-group'>
-            <input class='form-control' id='newpass' autocomplete='new-password' name='newpass' type='password' pattern='.{8,}' autocomplete='new-password' />
-            <div class='input-group-append'>
-              <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='newpass'><i class='fas fa-eye' aria-hidden='true'></i></span>
-            </div>
-          </div>
-        </div>
-      </div>
-
         <hr><br>
+      {% endif %}
+
         <h4>{{ 'Two Factor Authentication'|trans }}</h4>
         <div class='row'>
           <div class='col-md-6'>
