make where clause debug more discreet

--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -202,6 +202,10 @@
 
         <small class='form-text text-muted'>
           Press <kbd><kbd>ctrl</kbd> + <kbd>enter</kbd></kbd> or <kbd><kbd>⌘</kbd> + <kbd>enter</kbd></kbd> to submit search.
+          {% if App.Config.configArr.debug %}
+            <kbd data-action='toggle-next'>debug</kbd>
+            <pre hidden>{{ whereClause|raw }}</pre>
+          {% endif %}
         </small>
       </div>
       <div class='col-md-4 mb-2'>
@@ -223,9 +227,6 @@
         </ul>
         <a class='clickable' data-action='toggle-modal' data-target='advancedSearchModal'>{{ 'Full syntax'|trans }}</a>
       </div>
-      {% if App.Config.configArr.debug %}
-          <div><pre>{{ whereClause|raw }}</pre></div>
-      {% endif %}
     </div>
 
     <h4 data-action='toggle-next' data-icon='extendedSearchIcon'><i id='extendedSearchIcon' class='fas fa-chevron-circle-right'></i> {{ 'Search helpers'|trans }}</h4>
