--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -17,129 +17,168 @@
         <dl>
           <dt>Term</dt>
           <dd>A sequence of characters without space (<code>&blank;</code>),
-              <code>|</code>,
-              <code>&amp;</code>,
-              <code>-</code>,
-              <code>!</code>,
-              <code>(</code>,
-              <code>)</code>,
-              <code>'</code> and
-              <code>"</code>.<br>
-              <em>termA</em> or <em>termB</em> or <em>456</em>
+              <code><span class='token operator'>|</span></code>,
+              <code><span class='token operator'>&amp;</span></code>,
+              <code><span class='token operator'>-</span></code>,
+              <code><span class='token operator'>!</span></code>,
+              <code><span class='token punctuation'>(</span></code>,
+              <code><span class='token punctuation'>)</span></code>,
+              <code><sapn class='token string'>'</span></code> and
+              <code><sapn class='token string'>"</span></code>.<br>
+              <em><code><sapn class='token string'>termA</span></code></em> or
+              <em><code><sapn class='token string'>termB</span></code></em> or
+              <em><code><sapn class='token string'>456</span></code></em>
           </dd>
           <dt>Quoted term</dt>
-          <dd>A sequence of characters including space (<code>&blank;</code>) enclosed in single (<code>'</code>) or double (<code>"</code>) quotation marks.<br>
-              <em>'Hello world'</em> or <em>"I love eLabFTW!"</em>
+          <dd>A sequence of characters including space (<code>&blank;</code>)
+              enclosed in single (<code><span class='token string'>'</span></code>)
+              or double (<code><span class='token string'>"</span></code>) quotation marks.<br>
+              <em><code><span class='token string'>'Hello world'</span></code></em> or
+              <em><code><span class='token string'>"I love eLabFTW!"</span></code></em>
           </dd>
         </dl>
         <p>Two wildcards are available. The percent sign
-          (<code>%</code>)
+          (<code><span class='token important'>%</span></code>)
           matches zero or more characters while the underscore
-          (<code>_</code>)
+          (<code><span class='token important'>_</span></code>)
           matches exactly one character. To search for literal
-          <code>%</code> or <code>_</code>
+          <code><span class='token important'>%</span></code> or
+          <code><span class='token important'>_</span></code>
           the characters need to be escaped with a backslash
-          <code>\%</code> or <code>\_</code>.</p>
+          <code><span class='token important'>\%</span></code> or
+          <code><span class='token important'>\_</span></code>.</p>
         <h3>Term concatenation and grouping</h3>
         <p>Terms can be connected in different ways:</p>
         <ul>
           <li>
-            <code>OR</code> or
-            <code>|</code>,
-            <em>termA OR termB</em> or
-            <em>termA|termB</em>
+            <code><span class='token operator'>OR</span></code> or
+            <code><span class='token operator'>|</span></code>:
+            <em><code><span class='token string'>termA</span> <span class='token operator'>OR</span> <span class='token string'>termB</span></code></em> or
+            <em><code><span class='token string'>termA</span><span class='token operator'>|</span><span class='token string'>termB</span></code></em>
           </li>
           <li>
-            <code>AND</code>,
-            <code>&amp;</code> or
-            space (<code>&blank;</code>),
-            <em>termA AND termB</em> or
-            <em>termA&amp;termB</em> or
-            <em>termA&nbsp;termB</em>
+            <code><span class='token operator'>AND</span></code>,
+            <code><span class='token operator'>&amp;</span></code> or
+            space (<code>&blank;</code>):
+            <em><code><span class='token string'>termA</span> <span class='token operator'>AND</span> <span class='token string'>termB</span></code></em> or
+            <em><code><span class='token string'>termA</span><span class='token operator'>&amp;</span><span class='token string'>termB</span></code></em> or
+            <em><code><span class='token string'>termA</span>&nbsp;<span class='token string'>termB</span></code></em>
           </li>
           <li>
-            <code>NOT</code>,
-            <code>-</code> or
-            <code>!</code>,
-            <em>NOT termA</em> or
-            <em>-termA</em> or
-            <em>!termA</em>
+            <code><span class='token operator'>NOT</span></code>,
+            <code><span class='token operator'>-</span></code> or
+            <code><span class='token operator'>!</span></code>:
+            <em><code><span class='token operator'>NOT</span> <span class='token string'>termA</span></code></em> or
+            <em><code><span class='token operator'>-</span><span class='token string'>termA</span></code></em> or
+            <em><code><span class='token operator'>!</span><span class='token string'>termA</span></code></em>
           </li>
-          <li>Parenthesis <code>()</code>, <em>(termA OR termB) AND !termC</em></li>
+          <li>Parenthesis <code><span class='token punctuation'>()</span></code>: <em><code><span class='token punctuation'>(</span><span class='token string'>termA</span> <span class='token operator'>OR</span> <span class='token string'>termB</span><span class='token punctuation'>)</span> <span class='token operator'>AND</span> <span class='token operator'>!</span><span class='token string'>termC</span></code></em></li>
         </ul>
         <p>The operators are listed in increasing order of precedence. Note the whitespace around the operators.
-          <code>OR</code>, <code>AND</code> and <code>NOT</code>
+          <code><span class='token operator'>OR</span></code>,
+          <code><span class='token operator'>AND</span></code> and
+          <code><span class='token operator'>NOT</span></code>
           require to be surrounded by whitespace while
-          <code>|</code>,
-          <code>&amp;</code>,
-          <code>-</code> and
-          <code>!</code>
+          <code><span class='token operator'>|</span></code>,
+          <code><span class='token operator'>&amp;</span></code>,
+          <code><span class='token operator'>-</span></code> and
+          <code><span class='token operator'>!</span></code>
           don't.<br>
-          <em>termA termB OR termC</em>
+          <em><code><span class='token string'>termA</span> <span class='token string'>termB</span> <span class='token operator'>OR</span> <span class='token string'>termC</span></code></em>
           is equivalent to
-          <em>(termA AND termB) OR termC</em>.
+          <em><code><span class='token punctuation'>(</span><span class='token simple-term string'>termA</span> <span class='token operator'>AND</span> <span class='token simple-term string'>termB</span><span class='token punctuation'>)</span> <span class='token operator'>OR</span> <span class='token simple-term string'>termC</span></code></em>.
           To give priority to
-          <code>OR</code>
+          <code><span class='token operator'>OR</span></code>
           use parenthesis:
-          <em>termA AND (termB OR termC)</em>.
+          <em><code><span class='token simple-term string'>termA</span> <span class='token operator'>AND</span> <span class='token punctuation'>(</span><span class='token simple-term string'>termB</span> <span class='token operator'>OR</span> <span class='token simple-term string'>termC</span><span class='token punctuation'>)</span></code></em>.
         </p>
         <h3>Field/value pair searches</h3>
         <p>Field/value pairs are also applicable in the quick search fields.</p>
-        <p>Basic syntax <code><strong>field</strong>:value</code></p>
-        <p>By default wildcards are added to Terms and Quoted terms. The strict switch (<code>field:s:value</code>) disables the wildcards.</p>
+        <p>Basic syntax <code><span class='token keyword'>field</span><span class='token punctuation'>:</span><span class='token string'>value</span></code></p>
+        <p>By default wildcards are added to Terms and Quoted terms. The strict switch (<code><span class='token keyword'>field</span><span class='token punctuation'>:</span><span class='token keyword'>s</span><span class='token punctuation'>:</span><span class='token string'>value</span></code>) disables the wildcards.</p>
         <dl>
-          <dt>attachment</dt>
-          <dd>yes or no, true or false, 1 or 0, on or off:<br>
+          <dt><span class='token keyword'>attachment</span></dt>
+          <dd><span class='token boolean'>yes</span> or <span class='token boolean'>no</span>,
+              <span class='token boolean'>true</span> or <span class='token boolean'>false</span>,
+              <span class='token number'>1</span> or <span class='token number'>0</span>,
+              <span class='token boolean'>on</span> or <span class='token boolean'>off</span>:<br>
               search entries with/out attachments<br>
               Term or Quoted term:<br>
               search in filenames and comments of attachments</dd>
-          <dt>author</dt>
+          <dt><span class='token keyword'>author</span></dt>
           <dd>
             Term or Quoted term<br>
             Without any author the entire team will be searched.
           </dd>
-          <dt>body</dt>
+          <dt><span class='token keyword'>body</span></dt>
           <dd>Term or Quoted term</dd>
-          <dt>category</dt>
+          <dt><span class='token keyword'>category</span></dt>
           <dd>Term or Quoted term; Only if Database is selected.</dd>
-          <dt>date</dt>
+          <dt><span class='token keyword'>date</span></dt>
           <dd><a href='#dateFormats'>See accepted date formats below</a></dd>
-          <dt>elabid</dt>
+          <dt><span class='token keyword'>elabid</span></dt>
           <dd>Term or Quoted term</dd>
-          <dt>group</dt>
+          <dt><span class='token keyword'>group</span></dt>
           <dd>Term or Quoted term</dd>
-          <dt>locked</dt>
-          <dd>yes or no, true or false, 1 or 0, on or off</dd>
-          <dt>rating</dt>
-          <dd>1, 2, 3, 4, 5, unrated or 0</dd>
-          <dt>status</dt>
+          <dt><span class='token keyword'>locked</span></dt>
+          <dd><span class='token boolean'>yes</span> or <span class='token boolean'>no</span>,
+              <span class='token boolean'>true</span> or <span class='token boolean'>false</span>,
+              <span class='token number'>1</span> or <span class='token number'>0</span>,
+              <span class='token boolean'>on</span> or <span class='token boolean'>off</span>
+          </dd>
+          <dt><span class='token keyword'>rating</span></dt>
+          <dd><span class='token number'>1</span>,
+              <span class='token number'>2</span>,
+              <span class='token number'>3</span>,
+              <span class='token number'>4</span>,
+              <span class='token number'>5</span>,
+              <span class='token constant'>unrated</span> or
+              <span class='token number'>0</span>
+          </dd>
+          <dt><span class='token keyword'>status</span></dt>
           <dd>Term or Quoted term; Only if Experiment is selected.</dd>
-          <dt>timestamped</dt>
-          <dd>yes or no, true or false, 1 or 0, on or off</dd>
-          <dt>title</dt>
+          <dt><span class='token keyword'>timestamped</span></dt>
+          <dd><span class='token boolean'>yes</span> or
+              <span class='token boolean'>no</span>,
+              <span class='token boolean'>true</span> or
+              <span class='token boolean'>false</span>,
+              <span class='token number'>1</span> or
+              <span class='token number'>0</span>,
+              <span class='token boolean'>on</span> or
+              <span class='token boolean'>off</span>
+          </dd>
+          <dt><span class='token keyword'>title</span></dt>
           <dd>Term or Quoted term</dd>
-          <dt>visibility</dt>
+          <dt><span class='token keyword'>visibility</span></dt>
           <dd>Term or Quoted term<br>
-              A group name (e.g., 'Lab Heroes') or 'public', 'organization', 'team', 'user', or 'useronly'.</dd>
+              A group name (e.g., <span class='token string'>'Lab Heroes'</span>) or
+              <span class='token string'>public</span>,
+              <span class='token string'>organization</span>,
+              <span class='token string'>team</span>,
+              <span class='token string'>user</span>, or
+              <span class='token string'>useronly</span>.
+          </dd>
         </dl>
         <h3 id='dateFormats'>Date formats</h3>
-        <p>A date has to be provided in the following format: <code>YYYYMMDD</code>,
+        <p>A date has to be provided in the following format: <code><span class='token number'>YYYYMMDD</span></code>,
           i.e., four digit year, two digit month, and two digit day.
           Year, month and day can&mdash;but don't have to&mdash;be separated by
-          hyphen (<code>-</code>),
-          slash (<code>/</code>),
-          period (<code>.</code>),
-          or comma (<code>,</code>).<br>
+          hyphen (<code><span class='token operator'>-</span></code>),
+          slash (<code><span class='token operator'>/</span></code>),
+          period (<code><span class='token operator'>.</span></code>),
+          or comma (<code><span class='token operator'>,</span></code>).<br>
           Either a <strong>single date</strong> or a <strong>date range</strong> can be used.</p>
         <dl>
-          <dt>Single date: {operator}date</dt>
-          <dd>operator: <code>&lt;</code>, <code>&lt;=</code>, <code>=</code>, <code>&gt;=</code>, <code>&gt;</code>, or <code>!=</code><br>
-            An operator is optional. default is =<br>
-            e.g., <em>date:17890714</em> or <em>date:>1909-12-12</em> or <em>date:>=1867.11.07</em>
+          <dt>Single date: <span class='token operator'>operator</span><span class='token number'>date<span></dt>
+          <dd>operator: <code><span class='token operator'>&lt;</span></code>, <code><span class='token operator'>&lt;=</span></code>, <code><span class='token operator'>=</span></code>, <code><span class='token operator'>&gt;=</span></code>, <code><span class='token operator'>&gt;</span></code>, or <code><span class='token operator'>!=</span></code><br>
+            An operator is optional. default is <span class='token operator'>=</span><br>
+            e.g., <em><code><span class='token field-date keyword'>date<span class='token punctuation'>:</span><span class='token number'>17890714</span></span></code></em> or
+            <em><code><span class='token field-date keyword'>date<span class='token punctuation'>:</span><span class='token operator'>&gt;</span><span class='token number'>1909</span><span class='token punctuation'>-</span><span class='token number'>12</span><span class='token punctuation'>-</span><span class='token number'>12</span></span></code></em> or
+            <em><code><span class='token field-date keyword'>date<span class='token punctuation'>:</span><span class='token operator'>&gt;=</span><span class='token number'>1867</span><span class='token punctuation'>.</span><span class='token number'>11</span><span class='token punctuation'>.</span><span class='token number'>07</span></span></code></em>
           </dd>
-          <dt>Date range: date..date</dt>
-          <dd>Two dates separated by two periods (<code>..</code>)<br>
-            e.g., <em>date:20200101..20201231</em>
+          <dt>Date range: <span class='token number'>date</span><span class='token operator'>..</span><span class='token number'>date</span></dt>
+          <dd>Two dates separated by two periods (<code><span class='token operator'>..</span></code>)<br>
+            e.g., <em><code><span class='token field-date keyword'>date<span class='token punctuation'>:</span><span class='token number'>20200101</span><span class='token operator'>..</span><span class='token number'>20201231</span></span></code></em>
           </dd>
         </dl>
       </div>
@@ -187,19 +226,28 @@
     <div class='row'>
       <div class='col-md-8 mb-2'>
         <label for='extendedArea'><i class='fas fa-search'></i> {{ 'Search query'|trans }}</label>
-        <textarea
-          id='extendedArea'
-          name='extended'
-          rows='10'
-          class='form-control {{- extendedError ? ' is-invalid' }}'
-          style='font-family:monospace;'
-          placeholder='author:"{{ App.Users.userData.fullname|raw }}" status:"Running"'
-          aria-describedby='extendedFeedback'
-        >{{ extended }}</textarea>
+        {# next div is wrapper to position pre below textarea #}
+        <div style='position:relative;'>
+          <textarea
+            id='extendedArea'
+            name='extended'
+            rows='10'
+            class='form-control {{- extendedError ? ' is-invalid' }}'
+            placeholder='author:"{{ App.Users.userData.fullname|raw }}" status:"Running"'
+            spellcheck='false'
+            aria-describedby='extendedFeedback'
+            data-author='{{ usersArr|column('fullname')|join('|') }}'
+            data-category='{{ itemsTypesArr|column('category')|join('|') }}'
+            data-group='{{ teamGroups|join('|') }}'
+            data-rating='{{ ['1', '2', '3', '4', '5', 'unrated']|join('|') }}'
+            data-status='{{ statusArr|column('category')|join('|') }}'
+            data-visibility='{{ visibilityArr|join('|') }}'
+          >{{ extended }}</textarea>
+          <pre id='search-highlighting' class='form-control d-none' aria-hidden='true'><code></code></pre>
 
-        <!-- this is where the errors will be displayed -->
-        <div id='extendedFeedback' class='invalid-feedback'>{{ extendedError|raw }}</div>
-
+          {# this is where the errors will be displayed #}
+          <div id='extendedFeedback' class='invalid-feedback'>{{ extendedError|raw }}</div>
+        </div>
         <small class='form-text text-muted'>
           Press <kbd><kbd>ctrl</kbd> + <kbd>enter</kbd></kbd> or <kbd><kbd>⌘</kbd> + <kbd>enter</kbd></kbd> to submit search.
           {% if App.Config.configArr.debug %}
@@ -209,7 +257,7 @@
         </small>
       </div>
       <div class='col-md-4 mb-2'>
-        <p>Allowed Fields (<code><strong>field</strong>:value</code>):</p>
+        <p>Allowed Fields (<code><span class='token keyword'>field</span><span class='token punctuation'>:</span><span class='token string'>value</span></code>):</p>
         <ul class='list-unstyled'>
           <li><strong>attachment</strong>: yes, no, Simple or Quoted term</li>
           <li><strong>author</strong>: Simple or Quoted term</li>
